--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,5 +1,6 @@
 .contacts{
     color:var(--colorSecond);
+    background-color: var(--backgroundColor);
     width: 100%;
     height: auto;
     display: flex;
@@ -21,18 +22,25 @@
     text-decoration: none;
     list-style: none;
     width: 100%;
-
     margin: 0;
     padding: 0;
     margin-top: 1em;
+    padding: 0.5em;
 }
 .icon{
     width: 2em;
     height: 2em;
+    margin: 0;
+    background-color: black;
     filter: brightness(2) sepia(5) hue-rotate(0deg) saturate(0);
 }
 .icons{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    padding: 0em;
+}
+.icons a{
+    width: 2em;
+    height: fit-content;
 }
