--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ code {
   bottom: 0;
   left: 0;
   right: 0;
+  height: 100%;
 }
 :root{
   --backgroundColor:#ffffff;
